# mini-project-password-generator

./: .gitignore  Cargo.toml  README.md  push-to-github.sh
docs/: architecture.md  documentation.md  implementacao-tecnica.md  mermaid-diagrams.mmd
src/: main.rs
tests/: integration.rs
