[package]
name = "password-generator"
version = "0.1.0"
edition = "2021"
authors = ["Duskthoth"]
description = "A secure command-line password generator written in Rust"
license = "MIT"
readme = "README.md"
keywords = ["password", "generator", "security", "cli", "rust"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
getrandom = { version = "0.2", features = ["js", "stdweb", "custom"] }
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "password-generator"
path = "src/main.rs"